[gd_scene load_steps=5 format=3 uid="uid://ddthbw16csmsm"]

[ext_resource type="Script" path="res://Projectile/Banana/banana_peel.gd" id="1_exru0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0fq6s"]
albedo_color = Color(0.709804, 0.623529, 0, 1)
metallic = 1.0

[sub_resource type="TorusMesh" id="TorusMesh_t7emx"]
material = SubResource("StandardMaterial3D_0fq6s")
inner_radius = 0.101
outer_radius = 0.176

[sub_resource type="CylinderShape3D" id="CylinderShape3D_l6sfd"]
height = 0.0679935
radius = 0.201324

[node name="BananaPeel" type="RigidBody3D"]
collision_layer = 16
collision_mask = 3
axis_lock_linear_x = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
max_contacts_reported = 2
contact_monitor = true
linear_damp = 3.699
script = ExtResource("1_exru0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("TorusMesh_t7emx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_l6sfd")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.908

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
